# rubix-dapps

./: .gitignore  README.md
contracts/voting_contract/: .env.sample  Cargo.toml  README.md
contracts/voting_contract/artifacts/: voting_contract.wasm
contracts/voting_contract/dapp/: main.go
contracts/voting_contract/src/: lib.rs
nft_dapp/: README.md  app.node.json  index.html  package-lock.json  package.json  server.js  vite.config.ts
nft_dapp/backend/dapp_server/: README.md  go.mod  go.sum  main.go  model.go  rubix_interaction.go  server.go
nft_dapp/backend/nft_contract/: Cargo.toml
nft_dapp/scripts/: README.md  prerequisite.py  quorum_config.json  run.py
nft_dapp/scripts/app/: app_config.py
nft_dapp/scripts/node/: actions.py  commands.py  quorum.py  utils.py
nft_dapp/src/: App.tsx
nft_dapp/src/components/: ConnectionForm.tsx  LoadingButton.tsx  MintNFTForm.tsx  NFTCard.tsx  TransferModal.tsx
nft_dapp/src/services/: api.ts  config.ts
nft_dapp/src/types/: api.ts  config.ts  nft.ts
nft_dapp/uploads/: 1732601656332-802629289-useless_nft_1.avif  1732602030643-558539865-metadata_1.json
rubix_super_dapp/: Dockerfile  README.md  app.node.json  docker-compose.yml  index.html  package-lock.json  package.json  server.js  vite.config.ts
rubix_super_dapp/backend/dapp_server/: config.go  db_operations.go  go.mod  go.sum  model.go  rubix_interaction.go  server.go
rubix_super_dapp/docker/: nginx.conf
rubix_super_dapp/scripts/: prerequisite.py  quorum_config.json  run.py  run_testnet.py
rubix_super_dapp/src/: App.tsx  constants.ts
(+33 files in other folders)
