[package]
name = "voting_contract"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rubixwasm-std = { git = "https://github.com/rubixchain/rubix-wasm.git", package = "rubixwasm-std" }
wasm-bindgen = "0.2"
once_cell = "1.19.0"